endpoint para  listar los pacientes y sus datos
